Completed the Spear Martial Arts table in martial_arts.html.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -1672,102 +1672,110 @@
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Antelope Horn</span>
+                        <img class="object-none" src="./img/antelope_horn.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>256</td>
                     <td>
-                        -
+                        Spin your weapon around while holding down the Arts button. Release the button to then perform one final
+                        attack.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Dragon Flash</span>
+                        <img class="object-none" src="./img/dragon_flash.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>370</td>
                     <td>
-                        -
+                        Perform a spinning attack to cut down surrounding enemies, then release a powerful forward thrust.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Dragontail Whip</span>
+                        <img class="object-none" src="./img/dragontail_whip.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>256</td>
                     <td>
-                        -
+                        Spin your weapon, attacking your surroundings.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Falcon Strike</span>
+                        <img class="object-none" src="./img/falcon_strike.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>424</td>
                     <td>
-                        -
+                        Jump up while launching an enemy, then bring your weapon back down with a thud.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Goshawk's Dance</span>
+                        <img class="object-none" src="./img/goshawks_dance.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>256</td>
                     <td>
-                        -
+                        Thrust your weapon into the ground and jump up, performing a spinning slice. <br><br> [Additional Input: Turn]
+                        Moving while performing the technique will cause you to jump in that direction.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Horn Strike</span>
+                        <img class="object-none" src="./img/horn_strike.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>424</td>
                     <td>
-                        -
+                        Stab and enemy's feet, then pull your weapon upward.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Marching Dragon</span>
+                        <img class="object-none" src="./img/marching_dragon.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Advance forward while sweeping the enemies in front of you, then finish with a powerful blow. 
+                        <br><br> [Additional Input: After] Press the Arts button during the sweep attack to immediately execute 
+                        the finishing blow.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Monkey's Wisdom</span>
+                        <img class="object-none" src="./img/monkeys_wisdom.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>256</td>
                     <td>
-                        -
+                        Spin your body around, attacking your surroundings. Allows you to move while spinning.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
+                        <span>Serpent's Torment</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Unleash a barrage of rapid thrusts. <br><br> [Additional Input: Barrage] Hold down the Arts input to
+                        increase the number of thrusts. 
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Whistling Vortext</span>
+                        <img class="object-none" src="./img/whistling_vortex.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Thrust forward with your spear, charging while spinning it. <br><br> [Additional Effect: at High Spirit]
+                        Ehnances damage and prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Unparalleled Spear</span></span>
                     </td>
                 </tr>
             </table>
