Completed the Slashing Spear Martial Arts table in martial_arts.html.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -1832,122 +1832,136 @@
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Antelope Horn</span>
+                        <img class="object-none" src="./img/antelope_horn.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>256</td>
                     <td>
-                        -
+                        Spin your weapon around while holding down the Arts button. Release the button to then perform one final
+                        attack.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Dragon Flash</span>
+                        <img class="object-none" src="./img/dragon_flash.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>370</td>
                     <td>
-                        -
+                        Perform a spinning attack to cut down surrounding enemies, then release a powerful forward thrust.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Dragon Slayer</span>
+                        <img class="object-none" src="./img/dragon_slayer.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>530</td>
                     <td>
-                        -
+                        Leap high and forcefully slash downward.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Dragontail Whip</span>
+                        <img class="object-none" src="./img/dragontail_whip.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>256</td>
                     <td>
-                        -
+                        Spin your weapon, attacking your surroundings.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Emerging Dragon</span>
+                        <img class="object-none" src="./img/emerging_dragon.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>530</td>
                     <td>
-                        -
+                        Hold down the Arts input to take a stance, then release it to perform an attack. Release the Arts input
+                        at the right time to unleash a powerful attack.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Falcon Strike</span>
+                        <img class="object-none" src="./img/falcon_strike.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>424</td>
                     <td>
-                        -
+                        Jump up while launching an enemy, then bring your weapon back down with a thud.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Goshawk's Dance</span>
+                        <img class="object-none" src="./img/goshawks_dance.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>256</td>
                     <td>
-                        -
+                        Thrust your weapon into the ground and jump up, performing a spinning slice. <br><br> [Additional Input: Turn]
+                        Moving while performing the technique will cause you to jump in that direction.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Horn Strike</span>
+                        <img class="object-none" src="./img/horn_strike.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>424</td>
                     <td>
-                        -
+                        Stab and enemy's feet, then pull your weapon upward.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Marching Dragon</span>
+                        <img class="object-none" src="./img/marching_dragon.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Advance forward while sweeping the enemies in front of you, then finish with a powerful blow. 
+                        <br><br> [Additional Input: After] Press the Arts button during the sweep attack to immediately execute 
+                        the finishing blow.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Monkey's Wisdom</span>
+                        <img class="object-none" src="./img/monkeys_wisdom.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>256</td>
                     <td>
-                        -
+                        Spin your body around, attacking your surroundings. Allows you to move while spinning.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
+                        <span class="text-boss-skill">Parting Grass</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>370</td>
                     <td>
-                        -
+                        Slice horizontally, then bring your weapon down forcefully. <br><br> [Additional Effect: at High Spirit]
+                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Iron Poled Snake Spear</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span class="text-boss-skill">Python Turnover</span>
+                        <img class="object-none" src="./img/python_turnover.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>1000</td>
                     <td>
-                        -
+                        Stamp your feet, generating a shock wave that damages your surroundings, then charge forward while
+                        swinging your weapon. <br><br>
+
+                        [Additional Effect: at High Spirit] Enhances damage and prevents staggering from incoming attacks except
+                        for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Invictus Serpent Spear</span></span>
                     </td>
                 </tr>
             </table>
