Added more content to martial_arts.html.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -2018,42 +2018,45 @@
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Bamboo Sever</span>
+                        <img class="object-none" src="./img/bamboo_sever.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>300</td>
                     <td>
-                        -
+                        Quickly jump forward and perform a strike.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Beckoning Pine</span>
+                        <img class="object-none" src="./img/beckoning_pine.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>290</td>
                     <td>
-                        -
+                        Move to the side, then perform a slashing attack while flipping.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Blossom Stream</span>
+                        <img class="object-none" src="./img/blossom_stream.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>130</td>
                     <td>
-                        -
+                        Swing your weapon continuously, then strike forward. <br><br> [Additional Input: Barrage]
+                        Repeatedly press the Arts input to increase the number of slashes.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Peach Blossom</span>
+                        <img class="object-none" src="./img/peach_blossom.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>260</td>
                     <td>
-                        -
+                        Advance and release a combo attack using each weapon. <br><br>
+                        [Additional Input: Charge Attack] Hold down the Arts input upon activation to build up energy. The attack
+                        power increases according to the charge duration.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
