--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -2061,62 +2061,70 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Plum Rend</span>
+                        <img class="object-none" src="./img/plum_rend.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>160</td>
                     <td>
-                        -
+                        Cut forward, then quickly step back.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Skyward Evergreen</span>
+                        <img class="object-none" src="./img/skyward_evergreen.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>158</td>
                     <td>
-                        -
+                        Corkscrew diagonally up into the air, then perform multiple strikes.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Sudden Tornado</span>
+                        <img class="object-none" src="./img/sudden_tornado.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Jump forward, then perform a spinning attack.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Thorn Prick</span>
+                        <img class="object-none" src="./img/thorn_prick.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>480</td>
                     <td>
-                        -
+                        Unleash a barrage of rapid thrusts.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Waving Willow</span>
+                        <img class="object-none" src="./img/waving_willow.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Advance while rotating your body, continuously cutting surrounding enemies.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
+                        <span>Endless Flowering</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>160</td>
                     <td>
-                        -
+                        Swing your weapon in front of you while holding down the Arts input. While spinning the weapon, you will
+                        block enemy attacks in the same way as guarding. Release the Arts input to then unleash a powerful attack.
+                        <br><br>
+
+                        [Additional Effect: at High Spirit] Enhances damage and prevents staggering from incoming attacks except for
+                        powerful attacks by enemies. 
+                        <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Pair Swords of Aspiration</span></span>
                     </td>
                 </tr>
             </table>
