Completed Dual Sabres Martial Arts Section in martial_arts.html.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -2181,92 +2181,89 @@
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Bamboo Sever</span>
+                        <img class="object-none" src="./img/bamboo_sever.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>300</td>
                     <td>
-                        -
+                        Quickly jump forward and perform a strike.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Beckoning Pine</span>
+                        <img class="object-none" src="./img/beckoning_pine.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>290</td>
                     <td>
-                        -
+                        Move to the side, then perform a slashing attack while flipping.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Plum Rend</span>
+                        <img class="object-none" src="./img/plum_rend.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>160</td>
                     <td>
-                        -
+                        Cut forward, then quickly step back.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Skyward Evergreen</span>
+                        <img class="object-none" src="./img/skyward_evergreen.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>158</td>
                     <td>
-                        -
+                        Corkscrew diagonally up into the air, then perform multiple strikes.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Sudden Tornado</span>
+                        <img class="object-none" src="./img/sudden_tornado.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Jump forward, then perform a spinning attack.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Thorn Prick</span>
+                        <img class="object-none" src="./img/thorn_prick.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>480</td>
                     <td>
-                        -
+                        Unleash a barrage of rapid thrusts.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Waving Willow</span>
+                        <img class="object-none" src="./img/waving_willow.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Advance while rotating your body, continuously cutting surrounding enemies.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
+                        <span>Falling Leaf</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
-                    </td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
-                    </div></td>
-                    <td>-</td>
-                    <td>
-                        -
+                        Jump up while laungching an enemy, then knock them back to earth with a downward swing.
+                        <br><br>
+
+                        [Additional Effect: at High Spirit] Enhance damage and prevents staggering from incoming attacks except
+                        for powerful attacks by enemies.
+                        <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Hook Blades of King Helu</span></span>
                     </td>
                 </tr>
             </table>
