--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -2320,112 +2320,125 @@
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Bamboo Sever</span>
+                        <img class="object-none" src="./img/bamboo_sever.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>300</td>
                     <td>
-                        -
+                        Quickly jump forward and perform a strike.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Beckoning Pine</span>
+                        <img class="object-none" src="./img/beckoning_pine.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>290</td>
                     <td>
-                        -
+                        Move to the side, then perform a slashing attack while flipping.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Falling Leaves</span>
+                        <img class="object-none" src="./img/falling_leaves.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>210</td>
                     <td>
-                        -
+                        Perform a jumping kick. When the attack hits, you can use the force of the blow to repel yourself backward
+                        while throwing your weapon. Usable while on the ground or airborne.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Plum Rend</span>
+                        <img class="object-none" src="./img/plum_rend.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>160</td>
                     <td>
-                        -
+                        Cut forward, then quickly step back.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Scattered Leaves</span>
+                        <img class="object-none" src="./img/scattered_leaves.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>470</td>
                     <td>
-                        -
+                        Attack by throwing weapons in both hands forward.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Skyward Evergreen</span>
+                        <img class="object-none" src="./img/skyward_evergreen.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>158</td>
                     <td>
-                        -
+                        Corkscrew diagonally up into the air, then perform multiple strikes.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Sudden Tornado</span>
+                        <img class="object-none" src="./img/sudden_tornado.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Jump forward, then perform a spinning attack.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Vine's Grasp</span>
+                        <img class="object-none" src="./img/vines_grasp.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>380</td>
                     <td>
-                        -
+                        Catch an enemy with your weapon's tip and draw them in.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Waving Willow</span>
+                        <img class="object-none" src="./img/waving_willow.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Advance while rotating your body, continuously cutting surrounding enemies.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
+                        <span>Crescent Gale</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Connect both weapons and unleash broad-reaching slashing attacks.
+                        <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Dual Reaper Halberds</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
+                        <span>Thorn Cleave</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Spin your weapon and strike with it. <br><br>
+
+                        [Additional Input: Barrage] Hold down the Arts input to increase the number of slashes.
+                        <br><br>
+
+                        [Additional Effect: at High Spirit] Enhances damage and prevents staggering from incoming attacks except
+                        for powerful attacks by enemies.
+                        <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Tiger Fang Dual Halberds</span></span>
                     </td>
                 </tr>
             </table>
